# market-data-dissemination-simulator

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  instruments.json
.github/workflows/: ci.yml
client/: apply_engine.cpp  apply_engine.h  client_session.cpp  client_session.h  main.cpp  order_book_view.cpp  order_book_view.h
cmake/: README.md
common/: config_loader.cpp  config_loader.h  logging.cpp  logging.h  metrics.cpp  metrics.h  recording.cpp  recording.h
docker/: Dockerfile.client  Dockerfile.server  docker-compose.yml
docs/: benchmarks.md  design.md  flow.md  protocol.md
docs/bench_configs/: baseline_1x1_10k.json  fanout_1x100_1k.json  multi_100x10_500.json
proto/: mdd.proto
server/: instrument_config.cpp  instrument_config.h  main.cpp  market_data_service.cpp  market_data_service.h  order_book.cpp  order_book.h  publisher.cpp  publisher.h  simulator.cpp  simulator.h  subscription_manager.cpp  subscription_manager.h
tests/: test_client_apply.cpp  test_integration.cpp  test_order_book.cpp  test_replay_determinism.cpp
tools/: loadtest.cpp  replay.cpp
